--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@
         // ============================================
         // CONFIGURACIÓN - CAMBIA ESTA URL
         // ============================================
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz1CVWvWbQ2HR_-V3wddo37LV93PUTzdg_JBYqcnnHpvBWC5230FqZTBSo8f7hlMJeD/exec';
-        // Ejemplo: 'https://script.google.com/macros/s/AKfycbx.../exec'
-        
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxpGHWNAe0vcKNlqut2Z-lpHUpYX9BAjSMKVr-JD3yJdS-epzU3VjgNdWDo601L0LSR/exec'
         // ============================================
         // CAPTURA AUTOMÁTICA DE FECHA DE INICIO
         // ============================================
